# strelka-demo

./: router-demo.cabal  strelka-demo.cabal
demo/: Main.hs
demo/Main/: Effect.hs  RequestParsers.hs  ResponseBuilders.hs
